# tix

./: README.rst  pyproject.toml
files/: udp.py
tests/: test_attrs.py  test_github.py  test_hackernews.py  test_mixin.py  test_object.py  test_opml.py
tix/: __main__.py  broker.py  cli.py  commands.py  event.py  handler.py  ifc.py  main.py  parse.py  persist.py  run.py  timer.py  utils.py
tix/modules/: irc.py  opm.py  rss.py  tmr.py
