[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "tix"
description = "tics"
version = "1"
authors = [
    {name = "xobjectz", email = "objx@proton.me"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.scripts]
"tix" = "tix.__main__:wrapped"

[project.urls]
"home" = "https://pypi.org/project/tix"
"bugs" = "https://github.com/xobjectz/tix/issues"
"source" = "https://github.com/xobjectz/tix"


[tool.setuptools]
packages = [
    'tix',
    'tix.modules',
    'tix.user'
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/nixt" = [
    "README.rst",
]
[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
